--- a/index.html
+++ b/index.html
@@ -1,45 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food explorer</title>
-    <link rel="stylesheet" href="css/style.css">
-    <style>
-        /* Entrance */
-        body {
-            margin: 0;
-        }
-
-        /* Logo */
-        .logo {
-            width: 160px;
-            background-color: blueviolet;
-        }
-        .logo_big {
-
-        }
-        .logo
-        .logo__logomark {
-            width: 30%;
-            height: auto;
-        }
-        .logo__wordmark {
-            font: 900 3rem sans-serif;
-            color: white;
-        }
-        @media (min-width: 769px) {
-            /* Logo */
-            .logo {
-                background-color: greenyellow;
-            }
-        }
-    </style>
+    <script type="text/javascript">
+        window.addEventListener('load', () => window.location.assign('html/home.html'));
+    </script>
 </head>
 <body>
-    <div class="logo">
-        <img src="images/example.pn" alt="Logo" class="logo__logomark" width="48" height="48">
-        <div class="logo__wordmark"></div>
-    </div>
 </body>
 </html>
