--- a/html/home.html
+++ b/html/home.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#001119">
-    <link rel="stylesheet" href="../css/style.css" type="text/css">
+    <link rel="stylesheet" href="../style.css" type="text/css">
     <link rel="stylesheet" href="../css/home.css" type="text/css">
+    <script src="../script.js"></script>
     <title>Food explorer | Home</title>
 </head>
 <body>
-    
+    <div class="header">
+        Header
+    </div>
+    <div class="capsule">Ok</div>
+    <div class="footer">
+        <div class="footer__wrap">
+            
+            <span>sdfdf</span>
+            <span>sdfdf</span>
+        </div>
+    </div>
 </body>
 </html>
