--- a/html/menu.html
+++ b/html/menu.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#001119">
-    <link rel="stylesheet" href="../css/style.css" type="text/css">
+    <link rel="stylesheet" href="../style.css" type="text/css">
     <link rel="stylesheet" href="../css/menu.css" type="text/css">
+    <script src="../script.js"></script>
     <title>Food explorer | Menu</title>
 </head>
 <body>
