--- a/html/home.html
+++ b/html/home.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#001119">
+    <link rel="icon" href="../images/logo.svg" type="image/svg+xml">
     <link rel="stylesheet" href="../style.css" type="text/css">
     <link rel="stylesheet" href="../css/home.css" type="text/css">
     <script src="../script.js"></script>
     <title>Food explorer | Home</title>
 </head>
-<body>
+<body class="page">
     <div class="header">
         Header
     </div>
-    <div class="capsule">Ok</div>
+    <div class="page__capsule">Ok</div>
     <div class="footer">
         <div class="footer__wrap">
-            
-            <span>sdfdf</span>
-            <span>sdfdf</span>
+            <div class="footer__logo-wrap">
+                <div class="logo">
+                    <div class="logo__logomark">
+                        <img src="../images/logo.svg" alt="Logo" class="logo__img">
+                    </div>
+                    <div class="logo__wordmark">food explorer</div>
+                </div>
+            </div>
+            <div class="footer__сopyright">© 2023 - Todos os direitos reservados.</div>
         </div>
     </div>
 </body>
